Fixes the issue of popup window overflowing to the left side (#1856)
Popup menus in the editor no longer get cut off when they are too close to the edge of the screen. The position is now adjusted so they fit correctly and the arrow tip is positioned under the appropriate UI element.

--- a/public/editor/stylesheets/editor.less
+++ b/public/editor/stylesheets/editor.less
@@ -179,18 +179,6 @@ body {
   }
 }
 
-#filetree-pane-nav-add-menu:after {
-  content: '';
-  position: absolute;
-  border-style: solid;
-  border-width: 0 15px 15px;
-  border-color: #FFFFFF transparent;
-  display: block;
-  width: 0;
-  z-index: 1;
-  top: -15px;
-  left: 86px;
-}
 
 /* ------ LEFT PANE ------ */
 .editor-pane-nav {
@@ -393,8 +381,8 @@ body {
   }
 }
 
-#editor-pane-nav-options-menu:after {
-  content: '';
+
+.arrow-tip {
   position: absolute;
   border-style: solid;
   border-width: 0 15px 15px;
